# merkle-rs

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  gen_files.sh
src/: args.rs  client.rs  client_args.rs  common.rs  main.rs  merkle_tree.rs  server.rs  server_args.rs  utils.rs
