[package]
name = "merkle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"


[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.7"
